force-app/main/default/objects/Einstein_Platform_Account__c/Einstein_Platform_Account__c.object-meta.xml
<CustomObject>
    <label>Einstein Platform Account</label>
    <nameField>
        <label>Einstein Platform Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Einstein Platform Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>