force-app/main/default/objects/Einstein_Platform_Account__c/fields/Certificate_Name__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Name__c</fullName>
    <label>Certificate Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>