force-app/main/default/objects/Einstein_Platform_Account__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incomplete Setup</fullName>
                <default>true</default>
                <label>Incomplete Setup</label>
            </value>
            <value>
                <fullName>Incorrect Setup</fullName>
            </value>
            <value>
                <fullName>Connection Available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>