force-app/main/default/objects/Einstein_Platform_Account__c/recordTypes/Cert.recordType-meta.xml
<RecordType>
    <fullName>Cert</fullName>
    <active>true</active>
    <label>Cert</label>
</RecordType>