force-app/main/default/objects/Einstein_Platform_Account__c/recordTypes/File.recordType-meta.xml
<RecordType>
    <fullName>File</fullName>
    <active>true</active>
    <label>File</label>
</RecordType>